--- a/scai/solver/CMakeLists.txt
+++ b/scai/solver/CMakeLists.txt
@@ -35,53 +35,51 @@
 cmake_minimum_required ( VERSION 2.8 )
 
 ### Set PROJECT NAME / supported LANGUAGES
-project ( SOLVER CXX )
-
-### Set version of solver
-# TOOD: where is the best place to define this?
-set ( SCAI_SOLVER_VERSION_NAME "Alpamayo" )
-set ( SCAI_SOLVER_COPYRIGHT_YEAR 2015 )
-set ( SCAI_SOLVER_VERSION_MAJOR 1 )
-set ( SCAI_SOLVER_VERSION_MINOR 0 )
-set ( SCAI_SOLVER_VERSION_PATCH 1 )
-set ( SCAI_SOLVER_VERSION_COUNT 3 )
-set ( SCAI_SOLVER_VERSION ${SCAI_SOLVER_VERSION_MAJOR}.${SCAI_SOLVER_VERSION_MINOR}.${SCAI_SOLVER_VERSION_PATCH} )
+project ( scai_solver CXX )
 
 ### Set Module Path
 set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
-include ( VersionDefinition )
+### includes ###
 
-### Include Compiler Flags
+## important Variables for project
+include ( SetProjectVariables)
+include ( VersionDefinition )
+include ( InternalDependencies )
+include ( ExternalDependencies )
+
+## needed functions
+include ( Functions/scaiFunctions )
+include ( Functions/scaiProject )
+include ( Functions/relativeInstall )
+
+### Include compile dependent things
 if    ( NOT SCAI_COMPLETE_BUILD )
-	include ( SetBuildFlags )
-	include ( SCAIAssert )
-	include ( SetCPPFlags )
-	include ( Package/Sphinx )
+    include ( SetBuildFlags )
+    include ( CompilerVersion )
+    include ( SCAIAssert )
+    include ( SetCPPFlags )
+    include ( Package/Sphinx )
 else  ( NOT SCAI_COMPLETE_BUILD )
-	include ( Functions/CheckValueAtCompleteBuild )
-	CheckValueAtCompleteBuild ( solver )
+    include ( Functions/CheckValueAtCompleteBuild )
+    CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
 endif ( NOT SCAI_COMPLETE_BUILD )
 
+## C++11 or Boost
 include ( CheckC++11 )
 if    ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
     include( Package/Boost )
 endif ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
 
-### include all search packages
-include ( InternalDependencies )
-include ( ExternalDependencies )
-
-foreach    ( module ${SCAI_SOLVER_EXTERNAL_DEPS} )
-    include( Package/${module} )
-endforeach ( module ${SCAI_SOLVER_EXTERNAL_DEPS} )
-
-foreach    ( PACKAGE_TO_FIND ${SCAI_SOLVER_INTERNAL_DEPS} )
-    find_package ( ${PACKAGE_TO_FIND} ${SCAI_FIND_PACKAGE_FLAGS} REQUIRED )
-endforeach ( PACKAGE_TO_FIND $${SCAI_SOLVER_INTERNAL_DEPS} )
-
 ## finalize build flags
 include ( ConcludeFlags )
+
+### add definitions ###
+
+add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
+add_definitions ( -D${SCAI_LOGGING_FLAG} )
+add_definitions ( -D${SCAI_TRACING_FLAG} )
+add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
 
 ## MKL FOUND
 if     ( SCAI_BLAS_NAME STREQUAL "MKL" )
@@ -91,15 +89,6 @@ elseif ( INTERNALBLAS_FOUND )
 else   ( )
     add_definitions( -DADD_ )
 endif  ( )
-
-### add definitions ###
-
-add_definitions( ${ADDITIONAL_WARNING_FLAGS} )
-
-add_definitions ( -D${SCAI_LOGGING_FLAG} )
-add_definitions ( -D${SCAI_TRACING_FLAG} )
-
-add_definitions ( -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL} )
 
 if ( SCAI_OMP_SCHEDULE_FLAG )
     add_definitions ( -D${SCAI_OMP_SCHEDULE_FLAG} )
@@ -111,23 +100,13 @@ endif ( WIN32 )
 
 ### Project System-Include
 include_directories ( ../.. )
+addInternalAndExternalIncludes()
 
-foreach    ( module ${SCAI_SOLVER_INTERNAL_DEPS} ${SCAI_SOLVER_EXTERNAL_DEPS} )
-	string ( TOUPPER ${module} upper_module )
-    include_directories( ${${upper_module}_INCLUDE_DIR} )
-endforeach ( module ${SCAI_SOLVER_INTERNAL_DEPS} ${SCAI_SOLVER_EXTERNAL_DEPS} )
+### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
 
-include ( SCAIAssert )
+scai_project (
 
-### build solver library
-
-include ( Functions/scaiProject )
-
-### Add classes and header files
-
-scai_project(
-
-    CLASSES
+    CLASSES                  # .cpp, .hpp
 
         AMGSetup
         BiCG
@@ -153,14 +132,20 @@ scai_project(
         TFQMR
         TrivialPreconditioner
 
-    HEADERS
+    HEADERS                  # .hpp only
 
         shared_lib
     )
 
-### add subdirectories ###
+## add subdirectories
 add_subdirectory ( criteria )
+add_subdirectory ( doc )
+add_subdirectory ( examples )
 add_subdirectory ( logger )
+
+if ( FOUND_BOOST_TEST AND BUILD_TEST )
+    add_subdirectory ( test )
+endif ( FOUND_BOOST_TEST AND BUILD_TEST )
 
 ### for external amg ###
 file ( GLOB AMG_SUBDIRPRESENT "amg" )
@@ -171,49 +156,29 @@ if ( AMG_SUBDIRPRESENT )
     #set ( SOLVER_SUB_LIBRARIES ${SOLVER_SUB_LIBRARIES} PARENT_SCOPE )
 endif ( AMG_SUBDIRPRESENT )
 
-## build doc
-add_subdirectory( doc )
-
-## build test
-if ( FOUND_BOOST_TEST AND BUILD_TEST )
-    add_subdirectory ( test )
-endif ( FOUND_BOOST_TEST AND BUILD_TEST )
-
 ### add library ###
-
 add_library ( scai_solver ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
+set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
 
+## add link libraries
+addInternalAndExternalLinkLibraries()
 # Might be some additional solver libraries have been defined
-
-message ( STATUS "SOLVER uses following solver libraries: ${SOLVER_SUB_LIBRARIES}" )
+#message ( STATUS "SOLVER uses following solver libraries: ${SOLVER_SUB_LIBRARIES}" )
 if    ( SOLVER_SUB_LIBRARIES )
-    message ( STATUS "linked to solver: ${SOLVER_SUB_LIBRARIES}" )
+#    message ( STATUS "linked to solver: ${SOLVER_SUB_LIBRARIES}" )
     target_link_libraries( scai_solver ${SOLVER_SUB_LIBRARIES} )
 endif ( SOLVER_SUB_LIBRARIES )
 
-## add link libraries
-list ( REVERSE SCAI_SOLVER_INTERNAL_DEPS )
-foreach    ( module ${SCAI_SOLVER_INTERNAL_DEPS} )
-	string ( TOUPPER ${module} upper_module )
-	set ( SOLVER_LINK_LIBRARIES ${SOLVER_LINK_LIBRARIES} ${${upper_module}_LIBRARY} )
-endforeach ( module ${SCAI_SOLVER_INTERNAL_DEPS} )
-target_link_libraries ( scai_solver ${SCAI_START_LINK_LIBRARIES} ${SOLVER_LINK_LIBRARIES} ${SCAI_END_LINK_LIBRARIES} )
+### install ###
 
-foreach    ( module ${SCAI_SOLVER_EXTERNAL_DEPS} )
-	string ( TOUPPER ${module} upper_module )
-    target_link_libraries ( scai_solver ${SCAI_${upper_module}_LIBRARIES} )
-endforeach ( module ${SCAI_SOLVER_EXTERNAL_DEPS} )
+## install lib
+install ( TARGETS scai_solver DESTINATION lib )
 
-## install all Include files
-
-include( Functions/relativeInstall )
+## install headers
 relative_install( FILES ${CXX_HEADERS} DESTINATION include/scai/solver )
 
 ## install library.hpp
 install ( FILES ../solver.hpp DESTINATION include/scai )
-
-## build examples
-add_subdirectory( examples )
 
 # generate file make.inc + install it
 #configure_file ( "${CMAKE_CURRENT_SOURCE_DIR}/examples/make.inc.in" "${CMAKE_CURRENT_BINARY_DIR}/examples/make.inc" )
@@ -226,9 +191,7 @@ add_subdirectory( examples )
 ## add custum target distClean
 include ( DistClean )
 
-### install
-install ( TARGETS scai_solver DESTINATION lib )
-
+### summary ###
 if    ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
 	include ( Summaries/solver )
 endif ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
