--- a/scai/tasking/CMakeLists.txt
+++ b/scai/tasking/CMakeLists.txt
@@ -40,32 +40,39 @@ project ( scai_tasking CXX )
 ### Set Module Path
 set ( CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../CMake/Modules" )
 
-include ( SetProjectVariables)
+### includes ###
+
+## important Variables for project
 include ( VersionDefinition )
+include ( SetProjectVariables)
+include ( InternalDependencies )
+include ( ExternalDependencies )
 
+## needed functions
 include ( Functions/scaiFunctions )
+include ( Functions/scaiProject )
+include ( Functions/relativeInstall )
 
-### Include Compiler Flags
+### Include compile dependent things
 if    ( NOT SCAI_COMPLETE_BUILD )
-	include ( SetBuildFlags )
+    include ( SetBuildFlags )
     include ( CompilerVersion )
-	include ( SCAIAssert )
-	include ( SetCPPFlags )
-	include ( Package/Sphinx )
+    include ( SCAIAssert )
+    include ( SetCPPFlags )
+    include ( Package/Sphinx )
 else  ( NOT SCAI_COMPLETE_BUILD )
-	include ( Functions/CheckValueAtCompleteBuild )
-	CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
+    include ( Functions/CheckValueAtCompleteBuild )
+    CheckValueAtCompleteBuild ( ${PROJECT_SURNAME} )
 endif ( NOT SCAI_COMPLETE_BUILD )
 
+## C++11 or Boost
 include ( CheckC++11 )
 if    ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
     include( Package/Boost )
 endif ( NOT CXX_SUPPORTS_C11 OR BUILD_TEST )
 
 ### include all search packages
-include ( InternalDependencies )
-#no external dependencies
-addInternalPackages()
+addInternalAndExternalPackages()
 
 ## finalize build flags
 include ( ConcludeFlags )
@@ -83,22 +90,17 @@ endif ( WIN32 )
 
 ### Project System-Include
 include_directories ( ../.. )
-addInternalIncludes()
+addInternalAndExternalIncludes()
 
-### build library
-
-## add subdirectories
-add_subdirectory ( examples )
-
-include( Functions/scaiProject )
+### Add classes/headers to source files CXX_SOURCES, CXX_HEADERS, ...
 
 scai_project (
 
-    HEADERS
+    HEADERS                  # .hpp only
 
         NoSyncToken
 
-    CLASSES
+    CLASSES                  # .cpp, .hpp
 
         SyncToken
         TaskSyncToken
@@ -106,29 +108,32 @@ scai_project (
         ThreadPool
 )
 
-### add library
+## add subdirectories
+add_subdirectory ( doc )
+add_subdirectory ( examples )
+
+### add library ###
 add_library ( ${PROJECT_NAME} ${SCAI_LIBRARY_TYPE} ${CXX_SOURCES} )
 set_target_properties ( ${PROJECT_NAME} PROPERTIES VERSION ${${UPPER_PROJECT_NAME}_VERSION} )
 
 ## add link libraries
-addInternalLinkLibraries()
+addInternalAndExternalLinkLibraries()
 
 ### install ###
+
+## install lib
 install ( TARGETS ${PROJECT_NAME} DESTINATION lib )
 
-include( Functions/relativeInstall )
-
+## install headers
 relative_install ( FILES ${CXX_HEADERS} DESTINATION ${${UPPER_PROJECT_NAME}_INCLUDE_DIR} )
 
 ## install library.hpp
 install ( FILES ../${PROJECT_SURNAME}.hpp DESTINATION include/scai )
 
-### add documentation
-add_subdirectory( doc )
-
 ## add custum target distClean
 include ( DistClean )
 
+### summary ###
 if    ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
 	include ( Summaries/${PROJECT_SURNAME} )
 endif ( DEFINED SCAI_CMAKE_VERBOSE OR NOT DEFINED SCAI_COMPLETE_BUILD )
