--- a/scai/solver/test/CMakeLists.txt
+++ b/scai/solver/test/CMakeLists.txt
@@ -60,12 +60,13 @@ scai_project (
         ResidualThresholdTest
         RichardsonTest
         SimpleAMGTest
-        SolverTest
         SolutionProxyTest
+        SolverTest
         SORTest
-	    SpecializedJacobiTest
+        SpecializedJacobiTest
         TFQMRTest
         TimerTest
+        
    )
    
 ### add definitions ###
@@ -73,7 +74,7 @@ add_definitions ( -DLAMA_TESTFILE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../../../res
    
 add_executable ( SolverTest ${CXX_SOURCES} )
 
-target_link_libraries ( SolverTest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} scai_solver )
+target_link_libraries ( SolverTest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${PROJECT_NAME} )
     
 file ( GLOB LOCAL_HEADERS "*.hpp" )
 
