--- a/scai/common/cuda/CMakeLists.txt
+++ b/scai/common/cuda/CMakeLists.txt
@@ -30,13 +30,19 @@
  # @date 09.06.2015
 ###
 
+if    ( CUDA_FOUND AND USE_CUDA )
+    include_directories ( ${CUDA_TOOLKIT_INCLUDE} )
+
+    set ( CUDACLASSES CUDAError )
+endif ( CUDA_FOUND AND USE_CUDA )
+
 # add source and header files to the current project
 
 scai_project (
 
     CLASSES
 
-        CUDAError
+        ${CUDACLASSES}
 
     HEADERS
 
