--- a/scai/common/CMakeLists.txt
+++ b/scai/common/CMakeLists.txt
@@ -112,6 +112,7 @@ scai_project (
         Factory1
         Math
         OpenMP
+        preprocessor
         ReductionOp
         NonCopyable
         TypeTraits
