--- a/scai/hmemo/examples/cuda/Makefile
+++ b/scai/hmemo/examples/cuda/Makefile
@@ -1,6 +1,6 @@
 include ../make.inc
 
-INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include -I${CUDA_TOOLKIT_INCLUDE}
+INCLUDE_FLAGS = -I${BOOST_INCLUDE_DIR} -I${SCAI_ROOT}/include -I${CUDA_INCLUDE_DIR}
 
 LD_FLAGS = ${SCAI_LD_FLAGS} -Wl,-rpath=${SCAI_ROOT}/lib 
 
