--- a/scai/hmemo/examples/make.inc.in
+++ b/scai/hmemo/examples/make.inc.in
@@ -36,7 +36,7 @@ CXX=${CMAKE_CXX_COMPILER}
 CXX_FLAGS=${CMAKE_CXX_FLAGS} ${CMAKE_CXX_FLAGS_RELEASE} -DSCAI_TRACE_OFF -DSCAI_LOG_LEVEL_DEBUG -DSCAI_ASSERT_LEVEL_${SCAI_ASSERT_LEVEL}
 CXX_CUDA=${CUDA_NVCC_EXECUTABLE}
 CXX_CUDA_FLAGS=${CUDA_NVCC_FLAGS_CLEAN}
-CUDA_TOOLKIT_INCLUDE=${CUDA_TOOLKIT_INCLUDE}
+CUDA_INCLUDE_DIR=${CUDA_INCLUDE_DIR}
 SCAI_LD_FLAGS=${CMAKE_CXX_FLAGS} ${LAMA_USER_LINK_FLAGS} -L${CMAKE_INSTALL_PREFIX}/lib -lscai_hmemo -lscai_tasking -lscai_tracing -lscai_logging -lscai_common
 EXECUTABLES=${EXAMPLE_EXECUTABLES}
 EXECUTABLES_CUDA=${EXAMPLE_EXECUTABLES_CUDA}
