--- a/scai/lama/test/CMakeLists.txt
+++ b/scai/lama/test/CMakeLists.txt
@@ -109,13 +109,13 @@ if ( WIN32 )
 endif ( WIN32 )
 
 ### add executeable ###
-add_executable ( lama_test lama_test.cpp ${CXX_SOURCES} )
+add_executable ( lamaTest lamaTest.cpp ${CXX_SOURCES} )
 
 ### target link libraries ###
 if ( WIN32 )
-    target_link_libraries ( lama_test ${PROJECT_NAME} )
+    target_link_libraries ( lamaTest ${PROJECT_NAME} )
 else ( WIN32 )
-    target_link_libraries ( lama_test ${PROJECT_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
+    target_link_libraries ( lamaTest ${PROJECT_NAME} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${Boost_REGEX_LIBRARY} )
 endif ( WIN32 )
 
 ### Copy the README and xmltest.sh file in build directory ### 
